--- a/style.css
+++ b/style.css
@@ -77,3 +77,37 @@ a {
     justify-content: center;
     align-items: center;
 }
+
+.title {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+    display: flex;
+    justify-content: center;
+    margin: 32px 0;
+}
+
+.info-container {
+    display: flex;
+    justify-content: center;
+    gap: 75px;
+    text-align: center;
+}
+
+.info {
+    width: 150px;
+    margin-bottom: 32px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.text {
+    font-weight: 400;
+}
+
+.box {
+    height: 150px;
+    width: 150px;
+    border: 4px solid #3882f6;
+    border-radius: 10px;
+}
