--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ a {
 
 .info {
     width: 150px;
-    margin-bottom: 32px;
+    margin-bottom: 48px;
     display: flex;
     flex-wrap: wrap;
 }
@@ -110,4 +110,25 @@ a {
     width: 150px;
     border: 4px solid #3882f6;
     border-radius: 10px;
+}
+
+.quote-section {
+ min-height: 40vh;
+ background-color: #e5e7eb;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ padding: 0 100px;
+}
+
+.quote-text {
+    font-size: 36px;
+    font-style: italic;
+    color: #1f2937;
+}
+
+.signed {
+    font-weight: 900;
+    display: flex;
+    justify-content: flex-end;
 }
