--- a/style.css
+++ b/style.css
@@ -132,3 +132,41 @@ a {
     display: flex;
     justify-content: flex-end;
 }
+
+.section-four {
+    height: 40vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.action-box {
+    width: 800px;
+    background-color: #3882f6;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 32px 48px;
+}
+
+.last-title {
+    font-size: 24px;
+    color: #f9faf8;
+    font-weight: 700;
+}
+
+.last-subtext {
+    font-size: 18px;
+    color: #e5e7eb;
+    font-weight: 300;
+}
+
+.sign-up {
+    background-color: #3882f6;
+    color: #f9faf8;
+    border: 2px solid white;
+    border-radius: 10px;
+    font-size: 16px;
+    font-weight: 700;
+    padding: 8px 22px;
+}
