--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ a {
     color: #e5e7eb;
     font-size: 16px;
     font-weight: 700;
-    background-color: #3882f6;
+    background-color: blue;
     padding: 8px 24px;
     border-radius: 10px;
 }
@@ -102,13 +102,13 @@ a {
 }
 
 .text {
-    font-weight: 400;
+    font-weight: 500;
 }
 
 .box {
     height: 150px;
     width: 150px;
-    border: 4px solid #3882f6;
+    border: 4px solid blue;
     border-radius: 10px;
 }
 
@@ -125,6 +125,7 @@ a {
     font-size: 36px;
     font-style: italic;
     color: #1f2937;
+    font-weight: 400;
 }
 
 .signed {
@@ -142,7 +143,7 @@ a {
 
 .action-box {
     width: 800px;
-    background-color: #3882f6;
+    background-color: blue;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -162,11 +163,25 @@ a {
 }
 
 .sign-up {
-    background-color: #3882f6;
+    background-color: blue;
     color: #f9faf8;
     border: 2px solid white;
     border-radius: 10px;
     font-size: 16px;
     font-weight: 700;
     padding: 8px 22px;
+}
+
+.footer-section{
+    height: 10vh;
+    background-color: #1f2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-text {
+    font-size: 16px;
+    color: #e5e7eb;
+    font-weight: 400;
 }
